# feishu-bug-gateway

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/general_bug_report/: __main__.py  app.py  cleanup.py  init_config.py  services.py  settings.py
tests/: test_app.py  test_init_config.py  test_services.py
